--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/actionbarsherlock"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/android-lockpattern"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SwitchCompatLibrary"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
